fix question spacing on small and medium

--- a/assets/components/components/question/question.scss
+++ b/assets/components/components/question/question.scss
@@ -94,6 +94,10 @@ $animation: 0.2s;
   flex: 0 0 100%;
 }
 
+.question-content {
+  padding: ($spacer * 4);
+}
+
 .question-answers {
   display: flex;
   flex-flow: column nowrap;
